Remove modern Thread code